bad/bin_op_eq_array_class.example_compiler_output
ERROR
[1mbad/bin_op_eq_array_class.lat:5:13: [1;31merror: [0;1moperator == cannot compare values of types `int[]` and `Y` because values are not convertible to either of the two types[m
	new int[3] == new Y;
	           [1;32m^[m
